Remove unnecessary use of `PendingRead` in `SubscriptionModel`